--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "liquid-paywalll",
   "devDependencies": {
     "autoprefixer": "^9.5.0",
-    "bitcoinjs-lib": "^5.1.6",
     "bulma": "0.8.0",
+    "coinselect": "^3.1.11",
     "cpx": "^1.5.0",
-    "liquid-js": "https://github.com/vulpemventures/liquidjs.git",
+    "liquidjs-lib": "https://github.com/vulpemventures/liquidjs-lib.git",
     "node-fetch": "^2.6.0",
     "parcel-bundler": "^1.12.2",
     "postcss-cli": "^6.1.2",
